tests/__snapshots__/validation-toAcceptProps-requires-tsx-extension-stderr.snap.txt
Error: The matcher requires a '.tsx' file extension.

  5 | }
  6 | 
  7 | expect(Component).type.toAcceptProps({});
    |                        ~~~~~~~~~~~~~
  8 | 

      at ./__typetests__/toAcceptProps.tst.ts:7:24

